# GameEngine

./: GameEngine.sln  README.md
GameEngine/: .gitignore  CMakeLists.txt  GameEngine.cpp  GameEngine.vcxproj  GameEngine.vcxproj.filters  imgui.ini
GameEngine/GameEngine/Debug/: vc143.idb
GameEngine/GameEngine/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GameEngine.lastbuildstate
GameEngine/assets/scenes/: .json  Demo_game1.json  scene1.json  scene_maze.json  scene_test.json  scene_test1.json  scene_test2.json  scene_test4.json
GameEngine/include/: Camera.h  CameraController.h  Cubemap.h  Engine.h  FileUtils.h  GameObject.h  Input.h  Mesh.h  Physics.h  PhysicsComponent.h  PhysicsMaterial.h  RenderComponent.h  Renderer.h  Scene.h  SpatialGrid.h  Texture.h  Time.h  Transform.h  TransformComponent.h
GameEngine/include/Core/: Engine.h  GameTime.h
GameEngine/include/Debug/: ConstraintDebugCommands.h  ConstraintDebugView.h  DebugUI.h  DebugUIContext.h  LightingDebugCommands.h  PhysicsDebugView.h  SceneDebugCommands.h  TimeDebugView.h  TriggerDebugCommands.h  TriggerDebugView.h
GameEngine/include/Editor/: Gizmo.h
GameEngine/include/Gameplay/: GameScene.h  PlayerController.h
GameEngine/include/Input/: CameraController.h  Input.h
GameEngine/include/Physics/: Constraint.h  ConstraintPreset.h  ConstraintTemplate.h  Constraintparams.h  Constraintregistry.h  ForceGenerator.h  ForceGeneratorRegistry.h  Physics.h  PhysicsQuery.h  Trigger.h  TriggerRegistry.h
GameEngine/include/Rendering/: Camera.h  DirectionalLight.h  Mesh.h  MeshFactory.h  PointLight.h  PointLightRegistry.h  Renderer.h  ShaderManager.h  ShadowMap.h  Skybox.h  TextureManager.h
GameEngine/include/Saves/: SceneSavePanel.h
GameEngine/include/Scene/: Component.h  GameObject.h  PhysicsComponent.h  RenderComponent.h  Scene.h  ScriptComponent.h  Transform.h
GameEngine/include/Testing/: TestUI.h
GameEngine/include/UI/: ConstraintCreatorPanel.h  ForceGeneratorPanel.h  InspectorPanel.h  LightingPanel.h  ModelImporterPanel.h  PointLightPanel.h  Raycast.h  SpawnPanel.h  TriggerEditorPanel.h
GameEngine/shaders/: basic.frag  basic.vert  shadow_depth.frag  skybox.vert
GameEngine/src/: Camera.cpp  CameraController.cpp  DebugUI.cpp  Engine.cpp  GameObject.cpp  GameTime.cpp  Input.cpp  Main.cpp  Mesh.cpp  Physics.cpp  Raycast.cpp  Renderer.cpp  Stb_image.cpp  Time.cpp  Transform.cpp
GameEngine/src/Core/: Engine.cpp  GameTime.cpp  Main.cpp
GameEngine/src/Editor/: Editor.cpp  Gizmo.cpp
GameEngine/src/Gameplay/: GameScene.cpp  PlayerController.cpp
GameEngine/src/Input/: CameraController.cpp  Input.cpp
GameEngine/src/Physics/: Constraint.cpp  ConstraintTemplate.cpp  Constraintpreset.cpp  Constraintregistry.cpp  ForceGenerator.cpp  ForceGeneratorRegistry.cpp  Physics.cpp  PhysicsMaterial.cpp  PhysicsQuery.cpp  SpatialGrid.cpp  Trigger.cpp  TriggerRegistry.cpp
GameEngine/src/Rendering/: Camera.cpp  Cubemap.cpp  DirectionalLight.cpp  Mesh.cpp  MeshFactory.cpp  PointLightRegistry.cpp  Renderer.cpp  ShaderManager.cpp  ShadowMap.cpp  Skybox.cpp  Texture.cpp  TextureManager.cpp
GameEngine/src/Saves/: SceneSavePanel.cpp
GameEngine/src/Scene/: GameObject.cpp  PhysicsComponent.cpp  Scene.cpp  ScriptComponent.cpp  Transform.cpp
GameEngine/src/Testing/: TestUI.cpp
GameEngine/src/UI/: ConstraintCreatorPanel.cpp  DebugUI.cpp  ForceGeneratorPanel.cpp  InspectorPanel.cpp  LightingPanel.cpp  ModelImporterPanel.cpp  PointLightPanel.cpp  Raycast.cpp  SpawnPanel.cpp  TriggerEditorPanel.cpp
GameEngine/x64/Debug/: GameEngine.exe.recipe  GameEngine.ilk  GameEngine.vcxproj.FileListAbsolute.txt  vc143.idb
GameEngine/x64/Debug/GameEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GameEngine.lastbuildstate  GameEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
